--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
-
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,215 +10,61 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="foundation.min.css">
 	<link rel="stylesheet" href="FirstWebsite.css">
+	<link rel="stylesheet" href="css/all.min.css">
 
 	<title>Rado</title>
 
 	<script src="jquery.js"></script>
 </head>
 
-
 <body>
 	<header>
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x">
-				<a href="#about-me" class="cell medium-5">
-					<h1>Code<span class=„gradient”>Thinkin.</span></h1>
+			<div class="grid-x grid-padding-x align-middle text-center">
+				<a href="#about-me" class="cell large-6 text-left">
+					<div class="logo">Code<span>Thinkin.</span></div>
 				</a>
-				<a href="#about" class="cell small-2">
+				<a href="#about" class="cell large-2">
 					<span>About</span>
 				</a>
-				<a href="#ourwork" class="cell small-2">
+				<a href="#ourwork" class="cell large-2">
 					<span>Portfolio</span>
 				</a>
-				<a href="#contact" class="cell small-2">
+				<a href="#contact" class="cell large-2">
 					<span>Contact</span>
+				</a>
 			</div>
 		</div>
 	</header>
 
-	<section id="about-me">
+	<section id="about" class="text-center">
+		<div class="logo">Code<span>Thinkin.</span></div>
+		SIMPLICITY AND AESTHETICS
+	</section>
+
+	<section class="sentence">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center align-center" style="padding:12rem 0; height: 550px ">
-
-				<div class="cell small-6 medium-4 large-10">
-					<div class="h1">
-						CodeThinkin.<br>
-						<div class="grid x align-middle h7">
-							SIMPLICITY AND AESTHETICS
-							<div />
-						</div>
-					</div>
-				</div>
-			</div>
+			We’re excited for challenges in the new project.<br>
+			Let’s talk about your vision!
+		</div>
 	</section>
 
-
-	<section id="about">
-
+	<section class="icons text-center">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center align-center">
-
-				<div class="cell small-6 medium-4 large-10 " style="padding:10rem 0; height: 460px;">
-					<div class="h1">
-						CodeThinkin.<br>
-						<div class="h7">
-							Skill set:
-						</div>
-					</div>
-				</div>
-			</div>
+			<i class="fas fa-envelope"></i>
+			<i class="fas fa-alien"></i>
+			<i class="fas fa-cube"></i>
+			<i class="fas fa-phone"></i>
+			<i class="fas fa-user"></i>
+			<i class="fas fa-image"></i>
+			<i class="fas fa-download"></i>
+			<i class="fab fa-facebook"></i>
+			<i class="fab fa-instagram"></i>
+			<i class="fab fa-twitter"></i>
+			<i class="fab fa-github"></i>
+			<i class="fab fa-tiktok"></i>
 		</div>
 	</section>
-
-	<div class="sentence">
-		<div class="grid-container " style="height: 400px;">
-			<div class="grid-x grid-padding-x" style="height: 300px; padding: 2rem 0;">
-				<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
-					<div class="h7">
-						<div class="h2">About us:</div>
-						CodeThinkin specializes not only in the design of websites but also in the development
-						of
-						iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
-						Our mission is to provide effective technology along with universal creativity and
-						functionalities.<br>
-						Our software is responsive and can be used on any device. It is also smooth and easy to
-						take.
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<div class=" graphics">
-		<div class="grid-x align-middle text-center align-center"  style="padding:1rem 0; height: 200px">
-			<div class="cell medium-3 ">
-				<img src="images/develop.png" width="50" height="33"><br>
-				CONCEPTUAL DESIGN <br>
-				We create conceptual graphics and a preliminary design of the application/website for approval by the client
-			</div>
-			<div class="cell medium-3 ">
-				<img src="images/brand.png" width="50" height="33"><br>
-				REALIZATION AND TECHNOLOGY<br>
-				On the basis of the project, we select the appropriate technology that strengthens the functionality and shortens the implementation time
-			</div>
-			<div class="cell medium-3 ">
-				<img src="images/art.png" width="50" height="33"><br>
-				PRESENTATION<br>
-				During the work, we consult the progress and possible changes of the project on an ongoing basis
-			</div>
-		</div>
-	</div>
-	<div class="touch">
-		<div class="grid-padding-x " style="height: 50px;">
-		</div>
-	</div>
-	
-	</section>
-
-
-
-
-
-
-	<!-- //////////////////////////////foto1///////////////////////// -->
-	<section id="ourwork">
-		<div class="grid-container text-center align-middle" style="height: 100px;">
-			<div class="h1">Our work</div>
-		</div>
-	</section>
-	<div class="touch">
-		<div class="grid-container">
-			<div class="grid-padding-x " style="height: 300px; padding:1rem 0">
-				<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
-					<div class="h7" style="padding:2rem 0; ">
-						<div class="h2">Our work:</div>
-						Each project is characterized by an individualized approach to the client. Our goal is to
-						create an aesthetic and simple design tailored to your needs.
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-
-
-	<section id="contact" class="interested">
-		<div class="grid-container">
-			<div class="grid-x grid-padding-x" style="padding:6rem 0; height: 460px">
-
-				<div class="cell small-6 medium-4 large-12 align-middle text-center">
-					<div class="h1">
-						CodeThinkin.<br>
-						<div class="h7"> We invite you to get in touch with us.</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-		<div class="touch">
-			<div class="grid-container">
-				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
-					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
-						<div class="h7" style="padding:5rem 0; ">
-							<div class="h2">Contact with us:</div>
-							We’re excited for challenges in the new project. Let’s talk about your vision!
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="email">
-			<div class="grid-container">
-				<div class="grid-x align-center text-center" style="height: 150px; padding:2rem 0">
-					<div class="cell small-6 ">
-						<img src="images/email.png" width="50" height="33"><br>
-						CodeThinkin1@gmail.com
-					</div>
-					<div class="cell small-6  ">
-						<img src="images/phone.png" width="50" height="33"><br>
-						698351524
-					</div>
-				</div>
-			</div>
-		</div>
-	
-
-
-
-
-	<div class="grid-x gallery">
-		<div class="cell medium-6">
-			<img src="images/222.jpg"><br>
-			<div class="description">
-				Programming games at various stages of readiness and that includes advanced mechanics.
-			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/111.jpg"><br>
-			<div class="description">
-				Website design
-			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/333.jpg"><br>
-			<div class="description">
-				Web application design
-			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/444.jpg"><br>
-			<div class="description">
-				Mobile applications
-			</div>
-		</div>
-	</div>
-
-	<!-- /////////////////////////////////contact//////////////////// -->
 
 
 
@@ -227,5 +72,4 @@
 	<script src="FirstWebsite.js" type="module"></script>
 
 </body>
-
 </html>
