--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -37,7 +37,7 @@
 		</div>
 	</header>
 
-	<section id="about-me">
+	<section id="about-me" class="gradient">
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x text-center align-center" style="padding:12rem 0; height: 550px ">
 
@@ -54,7 +54,7 @@
 	</section>
 
 
-	<section id="about">
+	<section id="about"  class="gradient">
 
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x text-center align-center">
@@ -91,17 +91,19 @@
 	</div>
 
 
-	<div class=" graphics">
-		<div class="grid-x align-middle text-center align-center"  style="padding:1rem 0; height: 200px">
+	<div class=" graphics" >
+		<div class="grid-x align-middle text-center align-center" style="padding:1rem 0; height: 200px">
 			<div class="cell medium-3 ">
 				<img src="images/develop.png" width="50" height="33"><br>
 				CONCEPTUAL DESIGN <br>
-				We create conceptual graphics and a preliminary design of the application/website for approval by the client
+				We create conceptual graphics and a preliminary design of the application/website for approval by the
+				client
 			</div>
 			<div class="cell medium-3 ">
 				<img src="images/brand.png" width="50" height="33"><br>
 				REALIZATION AND TECHNOLOGY<br>
-				On the basis of the project, we select the appropriate technology that strengthens the functionality and shortens the implementation time
+				On the basis of the project, we select the appropriate technology that strengthens the functionality and
+				shortens the implementation time
 			</div>
 			<div class="cell medium-3 ">
 				<img src="images/art.png" width="50" height="33"><br>
@@ -114,7 +116,7 @@
 		<div class="grid-padding-x " style="height: 50px;">
 		</div>
 	</div>
-	
+
 	</section>
 
 
@@ -123,8 +125,8 @@
 
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
-	<section id="ourwork">
-		<div class="grid-container text-center align-middle" style="height: 100px;">
+	<section id="ourwork"  class="gradient">
+		<div class="grid-container text-center align-middle" style="height: 80px;">
 			<div class="h1">Our work</div>
 		</div>
 	</section>
@@ -145,7 +147,7 @@
 
 
 
-	<section id="contact" class="interested">
+	<section id="contact"  class="gradient">
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x" style="padding:6rem 0; height: 460px">
 
@@ -158,33 +160,33 @@
 			</div>
 		</div>
 	</section>
-		<div class="touch">
-			<div class="grid-container">
-				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
-					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
-						<div class="h7" style="padding:5rem 0; ">
-							<div class="h2">Contact with us:</div>
-							We’re excited for challenges in the new project. Let’s talk about your vision!
-						</div>
+	<div class="touch">
+		<div class="grid-container">
+			<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
+				<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
+					<div class="h7" style="padding:5rem 0; ">
+						<div class="h2">Contact with us:</div>
+						We’re excited for challenges in the new project. Let’s talk about your vision!
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="email">
-			<div class="grid-container">
-				<div class="grid-x align-center text-center" style="height: 150px; padding:2rem 0">
-					<div class="cell small-6 ">
-						<img src="images/email.png" width="50" height="33"><br>
-						CodeThinkin1@gmail.com
-					</div>
-					<div class="cell small-6  ">
-						<img src="images/phone.png" width="50" height="33"><br>
-						698351524
-					</div>
+	</div>
+	<div   class="gradient">
+		<div class="grid-container">
+			<div class="grid-x align-center text-center" style="height: 150px; padding:2rem 0">
+				<div class="cell small-6 ">
+					<img src="images/email.png" width="50" height="33"><br>
+					CodeThinkin1@gmail.com
+				</div>
+				<div class="cell small-6  ">
+					<img src="images/phone.png" width="50" height="33"><br>
+					698351524
 				</div>
 			</div>
 		</div>
-	
+	</div>
+
 
 
 
