--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	@@ -11,221 +10,66 @@
-		rel="stylesheet">
+	rel="stylesheet">
 	<link rel="stylesheet" href="foundation.min.css">
 	<link rel="stylesheet" href="FirstWebsite.css">
 	<link rel="stylesheet" href="css/all.min.css">
@@ -39,12 +40,94 @@
 		SIMPLICITY AND AESTHETICS
 	</section>
 
-	<section class="sentence">
+	<section class="sentence text-center ">
 		<div class="grid-container">
 			We’re excited for challenges in the new project.<br>
 			Let’s talk about your vision!
 		</div>
 	</section>
+
+	<section class=" grid-container" style="padding-top:8rem  ">
+		<div class="h7 ">Abaut us:</div>
+		<div>CodeThinkin specializes not only in the design of websites but also in the development of iOS/Android
+			mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
+			Our mission is to provide effective technology along with universal creativity and
+			functionalities.<br>
+			Our software is responsive and can be used on any device. It is also smooth and easy to
+		</div>
+	</section>
+
+
+
+
+	<section class=" grid-container" style="padding-top:8rem; padding-bottom: 8rem;">
+
+		<div class="h7">Our work:</div>
+		<div>Each project is characterized by an individualized approach to the client. Our goal is to create an
+			aesthetic and simple design tailored to your needs.
+		</div>
+	</section>
+
+	<div class="grid-x gallery">
+		<div class="cell medium-6">
+			<img src="images/222.jpg"><br>
+			<div class="description">
+				Programming games at various stages of readiness and that includes advanced mechanics.
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/111.jpg"><br>
+			<div class="description">
+				Website design
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/333.jpg"><br>
+			<div class="description">
+				Web application design
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/444.jpg"><br>
+			<div class="description">
+				Mobile applications
+			</div>
+		</div>
+	</div>
+
+
+	<footer>
+		<div class="grid-container">
+			<div class="grid-x grid-padding-x align-middle text-center">
+					<a  class="cell large-9 text-left">
+						<div class="logo">Code<span>Thinkin.</span></div>
+					</a>
+					<a  class="cell large-1">
+						<i class="fab fa-github"></i>
+					</a>
+					<a  class="cell large-1">
+						<i class="fab fa-instagram"></i>
+					</a>
+					<a  class="cell large-1">
+						<i class="fab fa-facebook"></i>
+					</a>
+			</div>
+		</div>
+	</footer>
+
+
+
+
+
+
+
+
+
+
+
 
 	<section class="icons text-center">
 		<div class="grid-container">
@@ -69,4 +152,5 @@
 	<script src="FirstWebsite.js" type="module"></script>
 
 </body>
+
 </html>
