--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
 	<section id="about">
 		<div class="grid-container py-8">
-			<div class="h7 ">Abaut us:</div>
+			<div class="h7 ">About us:</div>
 			<p>CodeThinkin specializes not only in the design of websites but also in the development of iOS/Android
 				mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
 				Our mission is to provide effective technology along with universal creativity and
@@ -62,11 +62,13 @@
 			</p>
 		
 
-			<div class="grid-x align-middle text-center align-center steps"  style="padding:1rem 0; height: 200px">
+			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
 				<div class="cell medium-3 ">
 					<i class="fa-solid fa-book"></i><br>
-					CONCEPTUAL DESIGN <br>
-					We create conceptual graphics and a preliminary design of the application/website for approval by the client
+					<div class="uppercase">Conceptual design</div>
+					<p>
+						We create conceptual graphics and a preliminary design of the application/website for approval by the client
+					</p>
 				</div>
 				<div class="cell medium-3 ">
 					<i class="fa-solid fa-microchip"></i><br>
@@ -80,9 +82,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="touch">
-			<div class="grid-padding-x " style="height: 50px;">
-			</div>
 
 
 
