--- a/contact.html
+++ b/contact.html
@@ -40,14 +40,42 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		SIMPLICITY AND AESTHETICS
+		We invite you to get in touch with us.
+	</section>
+	
+	
+	<section class="sentence text-center show-for-large">
+		<div class="grid-container">
+			<p>We invite you to get in touch with us.
+			</p>
+		</div>
 	</section>
 
-	Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aliquam tempora recusandae repellat officia
-	voluptate cupiditate ea maiores praesentium, nesciunt minus asperiores. Nemo expedita officiis iste, voluptates
-	dolores suscipit unde.
+	<section id="about">
+		<div class="grid-container py-8 text-center">
+		
+			<p>We remain open to new projects. We will be happy to answer questions about the implementation of your vision.</p>
+		
 
+			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
+				<div class="cell medium-6 ">
+					<i class="fa-solid fa-envelope"></i><br>
 
+					<p>
+						CodeThinkin1@gmail.com
+					</p>
+				</div>
+				
+				<div class="cell medium-6 ">
+					<i class="fa-solid fa-phone"></i><br>
+		
+					698351526
+				</div>
+			</div>
+		</div>
+    </section>
+
+	
 
 	<footer>
 		<div class="grid-container">
@@ -78,23 +106,6 @@
 
 
 
-
-	<section class="icons text-center">
-		<div class="grid-container">
-			<i class="fas fa-envelope"></i>
-			<i class="fas fa-alien"></i>
-			<i class="fas fa-cube"></i>
-			<i class="fas fa-phone"></i>
-			<i class="fas fa-user"></i>
-			<i class="fas fa-image"></i>
-			<i class="fas fa-download"></i>
-			<i class="fab fa-facebook"></i>
-			<i class="fab fa-instagram"></i>
-			<i class="fab fa-twitter"></i>
-			<i class="fab fa-github"></i>
-			<i class="fab fa-tiktok"></i>
-		</div>
-	</section>
 
 
 
