--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
 
-
+<!-- 
 
 
 
@@ -147,7 +147,7 @@
 			<i class="fab fa-github"></i>
 			<i class="fab fa-tiktok"></i>
 		</div>
-	</section>
+	</section> -->
 
 
 
