--- a/portfolio.html
+++ b/portfolio.html
@@ -40,48 +40,56 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		SIMPLICITY AND AESTHETICS
+		Our work
 	</section>
 
-    <div class="sentence">
-		<div class="grid-container " style="height: 400px;">
-			<div class="grid-x grid-padding-x" style="height: 300px; padding: 2rem 0;">
-				<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
-					<div class="h7">
-						<div class="h2">About us:</div>
-						CodeThinkin specializes not only in the design of websites but also in the development
-						of
-						iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
-						Our mission is to provide effective technology along with universal creativity and
-						functionalities.<br>
-						Our software is responsive and can be used on any device. It is also smooth and easy to
-						take.
-					</div>
+	<section class="sentence text-center show-for-large">
+		<div class="grid-container">
+			<p>Each project is characterized by an individualized approach to the client. Our goal is to create an
+				aesthetic and simple design tailored to your needs.
+			</p>
+		</div>
+	</section>
+
+	<section id="about">
+		<div class="grid-container py-8">
+			<div class="h7 ">Our work:</div>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus maiores ex omnis beatae hic dolor dignissimos? Illum perspiciatis mollitia vel est architecto quia! Cumque in, at hic sed numquam repudiandae.
+			</p>
+		</div>
+
+		<div class="grid-x gallery">
+			<div class="cell medium-6">
+				<img src="images/222.jpg"><br>
+				<div class="description">
+					Programming games at various stages of readiness and that includes advanced mechanics.
+				</div>
+			</div>
+
+			<div class="cell medium-6">
+				<img src="images/111.jpg"><br>
+				<div class="description">
+					Website design
+				</div>
+			</div>
+
+			<div class="cell medium-6">
+				<img src="images/333.jpg"><br>
+				<div class="description">
+					Web application design
+				</div>
+			</div>
+
+			<div class="cell medium-6">
+				<img src="images/444.jpg"><br>
+				<div class="description">
+					Mobile applications
 				</div>
 			</div>
 		</div>
-	</div>
+    </section>
 
 
-	<div class=" graphics">
-		<div class="grid-x align-middle text-center align-center"  style="padding:1rem 0; height: 200px">
-			<div class="cell medium-3 ">
-				<img src="images/develop.png" width="50" height="33"><br>
-				CONCEPTUAL DESIGN <br>
-				We create conceptual graphics and a preliminary design of the application/website for approval by the client
-			</div>
-			<div class="cell medium-3 ">
-				<img src="images/brand.png" width="50" height="33"><br>
-				REALIZATION AND TECHNOLOGY<br>
-				On the basis of the project, we select the appropriate technology that strengthens the functionality and shortens the implementation time
-			</div>
-			<div class="cell medium-3 ">
-				<img src="images/art.png" width="50" height="33"><br>
-				PRESENTATION<br>
-				During the work, we consult the progress and possible changes of the project on an ongoing basis
-			</div>
-		</div>
-	</div>
 
 	<footer>
 		<div class="grid-container">
@@ -105,23 +113,6 @@
 
 
 
-
-	<section class="icons text-center">
-		<div class="grid-container">
-			<i class="fas fa-envelope"></i>
-			<i class="fas fa-alien"></i>
-			<i class="fas fa-cube"></i>
-			<i class="fas fa-phone"></i>
-			<i class="fas fa-user"></i>
-			<i class="fas fa-image"></i>
-			<i class="fas fa-download"></i>
-			<i class="fab fa-facebook"></i>
-			<i class="fab fa-instagram"></i>
-			<i class="fab fa-twitter"></i>
-			<i class="fab fa-github"></i>
-			<i class="fab fa-tiktok"></i>
-		</div>
-	</section>
 
 
 
