--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/all.min.css">
 
-	<title>Rado</title>
+	<title>RadoPl</title>
 
 	<script src="jquery.js"></script>
 </head>
@@ -22,13 +22,13 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>About</span>
+						<span>O nas</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
 					</a>
 					<a href="contact.html">
-						<span>Contact</span>
+						<span>Kontakt</span>
 					</a>
 					<a href="pl.html">
 						<span>pl</span>
@@ -40,13 +40,13 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		We invite you to get in touch with us.
+		<div class="uppercase">w czym możemy pomoc?</div>
 	</section>
 	
 	
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			<p>We invite you to get in touch with us.
+			<p>Zapraszamy do kontaktu z nami.
 			</p>
 		</div>
 	</section>
@@ -54,7 +54,7 @@
 	<section id="about">
 		<div class="grid-container py-8 text-center">
 		
-			<p>We remain open to new projects. We will be happy to answer questions about the implementation of your vision.</p>
+			<p>Pozostajemy w ciągłej otwartości na nowe projekty. Z chęcią odpowiemy na pytania dotyczące realizacji Twojej wizji..</p>
 		
 
 			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
