--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/all.min.css">
 
-	<title>Rado</title>
+	<title>RadoPl</title>
 
 	<script src="jquery.js"></script>
 </head>
@@ -22,16 +22,16 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>About</span>
+						<span>O nas</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
 					</a>
 					<a href="contact.html">
-						<span>Contact</span>
+						<span>kontakt</span>
 					</a>
 					<a href="pl.html">
-						<span>pl</span>
+						<span>Eng</span>
 					</a>
 				</div>
 			</div>
@@ -40,31 +40,27 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		SIMPLICITY AND AESTHETICS
+		Prosto i estetycznie 
 	</section>
 
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			We’re excited for challenges in the new project.<br>
-			Let’s talk about your vision!
+			Pozostajemy w ciągłej otwartości na nowe projekty. Z chęcią odpowiemy na pytania dotyczące realizacji Twojej wizji.
 		</div>
 	</section>
 
 	<section id="about">
 		<div class="grid-container py-8">
 			<div class="h7 ">Abaut us:</div>
-			<p>CodeThinkin specializes not only in the design of websites but also in the development of iOS/Android
-				mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
-				Our mission is to provide effective technology along with universal creativity and
-				functionalities.<br>
-				Our software is responsive and can be used on any device. It is also smooth and easy to
+			<p>Codethinkin specjalizuje się w projektowaniu i tworzeniu  stron internetowych jak również 
+				aplikacje/gry mobilne iOS/Android, aplikacje desktopowe Windows/macOS/Linux-AppImage<br>
+				W naszej pracy stawimy na połączenie efektywnych środków technologicznych z ponadczasąwą kreatywnością i funkcjonalnością. Produkty cyfrowe które dostarczamy cechują się pełną responsywnością (dopasowane do kazdego urządzenia) jak równiez sprawiają że usługa przez nie wyrażana staje się przyjana i łatwa w odbiorze.
 			</p>
 
 
 
 			<div class="h7">Our work:</div>
-			<p>Each project is characterized by an individualized approach to the client. Our goal is to create an
-				aesthetic and simple design tailored to your needs.
+			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie estetycznego projektu dopasowanego do potrzeb odbiorcy.
 			</p>
 		</div>
 
