--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/all.min.css">
 
-	<title>Rado</title>
+	<title>RadoPL</title>
 
 	<script src="jquery.js"></script>
 </head>
@@ -22,13 +22,13 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>About</span>
+						<span>O nas</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
 					</a>
 					<a href="contact.html">
-						<span>Contact</span>
+						<span>Kontakt</span>
 					</a>
 					<a href="pl.html">
 						<span>pl</span>
@@ -40,13 +40,12 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		Our work
+		<div class="uppercase">nasze projekty</div>
 	</section>
 
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			<p>Each project is characterized by an individualized approach to the client. Our goal is to create an
-				aesthetic and simple design tailored to your needs.
+			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie estetycznego projektu dopasowanego do potrzeb odbiorcy.
 			</p>
 		</div>
 	</section>
