--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/all.min.css">
 
-	<title>Rado</title>
+	<title>RadoPl</title>
 
 	<script src="jquery.js"></script>
 </head>
@@ -22,13 +22,13 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>About</span>
+						<span>O nas</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
 					</a>
 					<a href="contact.html">
-						<span>Contact</span>
+						<span>Kontakt</span>
 					</a>
 					<a href="pl.html">
 						<span>pl</span>
@@ -40,13 +40,12 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		SIMPLICITY AND AESTHETICS
+		<div class="uppercase">Prostota i estetyka</div>
 	</section>
 
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			<p>Each project is characterized by an individualized approach to the client. Our goal is to create an
-				aesthetic and simple design tailored to your needs.
+			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie estetycznego projektu dopasowanego do potrzeb odbiorcy.
 			</p>
 		</div>
 	</section>
@@ -54,35 +53,42 @@
 	<section id="about">
 		<div class="grid-container py-8">
 			<div class="h7 ">About us:</div>
-			<p>CodeThinkin specializes not only in the design of websites but also in the development of iOS/Android
-				mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
-				Our mission is to provide effective technology along with universal creativity and
-				functionalities.<br>
-				Our software is responsive and can be used on any device. It is also smooth and easy to
+			<p>Codethinkin specjalizuje się w projektowaniu i tworzeniu stron internetowych jak również
+				aplikacje/gry mobilne iOS/Android, aplikacje desktopowe Windows/macOS/Linux-AppImage<br>
+				W naszej pracy stawimy na połączenie efektywnych środków technologicznych z ponadczasąwą kreatywnością i
+				funkcjonalnością. Produkty cyfrowe które dostarczamy cechują się pełną responsywnością (dopasowane do
+				kazdego urządzenia) jak równiez sprawiają że usługa przez nie wyrażana staje się przyjana i łatwa w
+				odbiorze.
 			</p>
-		
+
 
 			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
 				<div class="cell medium-3 ">
 					<i class="fa-solid fa-book"></i><br>
-					<div class="uppercase">Conceptual design</div>
+					<div class="uppercase">projekt koncepcyjny</div>
 					<p>
-						We create conceptual graphics and a preliminary design of the application/website for approval by the client
+						Tworzymy grafikę koncepcyjną oraz wstępny projekt aplikacji/strony www do akceptacji
+						przez klienta
 					</p>
 				</div>
 				<div class="cell medium-3 ">
 					<i class="fa-solid fa-microchip"></i><br>
-					REALIZATION AND TECHNOLOGY<br>
-					On the basis of the project, we select the appropriate technology that strengthens the functionality and shortens the implementation time
+					<div class="uppercase">realizacja i technologia</div>
+					<p>
+						Na podstawie projektu dobieramy odpowiednią technologię która wzmacnia
+						funkcjonalność i skraca czas realizacji
+					</p>
 				</div>
 				<div class="cell medium-3 ">
 					<i class="fa-solid fa-laptop"></i><br>
-					PRESENTATION<br>
-					During the work, we consult the progress and possible changes of the project on an ongoing basis
+					<div class="uppercase">prezentacja</div>
+					<p>
+						W trakcie prac na bieżąco konsultujemy postępy i ewentualne zmiany w projekcie
+					</p>
 				</div>
 			</div>
 		</div>
-    </section>
+	</section>
 
 
 
