--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>O nas</span>
+						<span>About us</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
 					</a>
 					<a href="contact.html">
-						<span>kontakt</span>
+						<span>Contact</span>
 					</a>
 					<a href="pl.html">
-						<span>Eng</span>
+						<span>pl</span>
 					</a>
 				</div>
 			</div>
