--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 		<div class="grid-container">
 			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie estetycznego projektu dopasowanego do potrzeb odbiorcy.
 			</p>
-		</div>lkkkkkkkkkkkkkkkkkkk
+		</div>
 	</section>
 
 	<section id="about">
