--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>O nas</span>
+						<span>About us</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
