--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/all.min.css">
 
-	<title>RadoPl</title>
+	<title>RadoENG</title>
 
 	<script src="jquery.js"></script>
 </head>
