--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 						<span>Portfolio</span>
 					</a>
 					<a href="contact.html">
-						<span>Kontakt</span>
+						<span>Contact</span>
 					</a>
 					<a href="pl.html">
 						<span>pl</span>
