--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
 	<section id="about">
 		<div class="grid-container py-8">
-			<div class="h7 ">About us:</div>
+			<div class="h7 ">O Nas:</div>
 			<p>Codethinkin specjalizuje się w projektowaniu i tworzeniu stron internetowych jak również
 				aplikacje/gry mobilne iOS/Android, aplikacje desktopowe Windows/macOS/Linux-AppImage<br>
 				W naszej pracy stawimy na połączenie efektywnych środków technologicznych z ponadczasąwą kreatywnością i
