--- a/portfolio.html
+++ b/portfolio.html
@@ -45,17 +45,41 @@
 
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie estetycznego projektu dopasowanego do potrzeb odbiorcy.
+			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie
+				estetycznego projektu dopasowanego do potrzeb odbiorcy.
 			</p>
 		</div>
 	</section>
 
 	<section id="about">
 		<div class="grid-container py-8">
-			<div class="h7 ">Our work:</div>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus maiores ex omnis beatae hic dolor dignissimos? Illum perspiciatis mollitia vel est architecto quia! Cumque in, at hic sed numquam repudiandae.
-			</p>
+
+			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
+				<div class="cell medium-3 ">
+					<i class="fa-solid fa-user-tie"></i>
+					<p>
+						1. Opowiedz nam czego dotyczy Twoja działalność i jak ma wyglądać Twoja stron
+					</p>
+				</div>
+				<div class="cell medium-3 ">
+					<i class="fa-solid fa-person-chalkboard"></i>
+					<p>
+						2. Przygotujemy dla Ciebie przykładową propozycję dopasowaną do potrzeb Twojego biznesu
+					</p>
+				</div>
+				<div class="cell medium-3 ">
+					<i class="fa-solid fa-thumbs-up"></i>
+
+					<p>
+						3. Zdecyduj czy tak
+						ma wyglądać Twoja przyszła strona
+
+					</p>
+				</div>
+			</div>
 		</div>
+
+
 
 		<div class="grid-x gallery">
 			<div class="cell medium-6">
@@ -86,7 +110,7 @@
 				</div>
 			</div>
 		</div>
-    </section>
+	</section>
 
 
 
