--- a/portfolio.html
+++ b/portfolio.html
@@ -45,68 +45,50 @@
 
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie
-				estetycznego projektu dopasowanego do potrzeb odbiorcy.
+			<p>Sprawdź nasze portfolio
 			</p>
 		</div>
 	</section>
 
-	<section id="about">
-		<div class="grid-container py-8">
+	<section>
+		<div class="grid-x grid-padding-y  text-center align-center steps">
+			<div class="cell small-3 ">
+				<img src="images/1111.png">
+			</div>
 
-			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
-				<div class="cell medium-3 ">
-					<i class="fa-solid fa-user-tie"></i>
-					<p>
-						1. Opowiedz nam czego dotyczy Twoja działalność i jak ma wyglądać Twoja stron
-					</p>
-				</div>
-				<div class="cell medium-3 ">
-					<i class="fa-solid fa-person-chalkboard"></i>
-					<p>
-						2. Przygotujemy dla Ciebie przykładową propozycję dopasowaną do potrzeb Twojego biznesu
-					</p>
-				</div>
-				<div class="cell medium-3 ">
-					<i class="fa-solid fa-thumbs-up"></i>
 
+				<div class="cell small-3 grid-x grid-y  text-center align-center steps">
 					<p>
-						3. Zdecyduj czy tak
-						ma wyglądać Twoja przyszła strona
+						Nasza interpretacja gry Super Mario 2d.
+					</p>
+					<input class="but1" value="click here" type="button"
+						onClick="parent.location='https://radoradoslaw.github.io/Super-Mario/Game/'">
+				</div>
+			</div>
+			<div class="grid-x grid-padding-y  text-center align-center steps">
+
+				<div class="cell small-3 grid-x grid-y  text-center align-center steps ">
+					<p>
+						Projekty w pełni skalowalne i dopasowane pod każde urządzenie.
 
 					</p>
+					<input class="but1" value="click here" type="button"
+						onClick="parent.location='https://radoradoslaw.github.io/Super-Mario/Game/'">
+
+
+				</div>
+				<div class="cell small-3 ">
+					<img src="images/2222.png">
 				</div>
 			</div>
-		</div>
-
-
-
-		<div class="grid-x gallery">
-			<div class="cell medium-6">
-				<img src="images/222.jpg"><br>
-				<div class="description">
-					Programming games at various stages of readiness and that includes advanced mechanics.
+			<div class="grid-x grid-padding-y  text-center align-center steps">
+				<div class="cell small-3 ">
+					<img src="images/house.jpg">
 				</div>
-			</div>
-
-			<div class="cell medium-6">
-				<img src="images/111.jpg"><br>
-				<div class="description">
-					Website design
-				</div>
-			</div>
-
-			<div class="cell medium-6">
-				<img src="images/333.jpg"><br>
-				<div class="description">
-					Web application design
-				</div>
-			</div>
-
-			<div class="cell medium-6">
-				<img src="images/444.jpg"><br>
-				<div class="description">
-					Mobile applications
+				<div class="cell small-3 grid-x grid-y  text-center align-center steps">
+					<p>
+						Przygotowyjemy grafiki konceocyjne dopasowane pod Twoje potrzeby
+					</p>
 				</div>
 			</div>
 		</div>
@@ -145,3 +127,4 @@
 </body>
 
 </html>
+
