--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<section id="about">
 		<div class="grid-container py-8">
-			<div class="h7 ">Abaut us:</div>
+			<div class="h7 ">About us:</div>
 			<p>Codethinkin specjalizuje się w projektowaniu i tworzeniu  stron internetowych jak również 
 				aplikacje/gry mobilne iOS/Android, aplikacje desktopowe Windows/macOS/Linux-AppImage<br>
 				W naszej pracy stawimy na połączenie efektywnych środków technologicznych z ponadczasąwą kreatywnością i funkcjonalnością. Produkty cyfrowe które dostarczamy cechują się pełną responsywnością (dopasowane do kazdego urządzenia) jak równiez sprawiają że usługa przez nie wyrażana staje się przyjana i łatwa w odbiorze.
